--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^20.2.4",
     "@angular/platform-browser-dynamic": "^20.2.4",
     "@angular/router": "^20.2.4",
+    "axios": "^1.11.0",
     "echarts": "^6.0.0",
     "ngx-echarts": "^20.0.2",
     "rxjs": "~7.8.0",
