--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@angular/platform-browser-dynamic": "^20.2.4",
     "@angular/router": "^20.2.4",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "echarts": "^6.0.0",
+    "ng2-charts": "^8.0.0",
     "ngx-echarts": "^20.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
