--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^20.2.4",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "echarts": "^6.0.0",
     "ng2-charts": "^8.0.0",
     "ngx-echarts": "^20.0.2",
